use depends on to support fanout and fanin structure
